# double-down

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  RTI.cpp  RTI.hpp  Vec3da.h  priitives.hpp  primitives.cpp  ray.h
.github/workflows/: ci.yml  cmake.yml
apps/: CMakeLists.txt  moab_rf.cpp
ci/: dagmc-install.sh  embree-install.sh  install-apt-pkgs.sh  moab-install.sh  travis-run.sh
cmake/: FindMOAB.cmake  Findembree.cmake  ddConfig.cmake.in  ddConfigVersion.cmake.in
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/api/: cpp_double_down.rst
docs/methodology/: implementation.rst  index.rst  introduction.rst
docs/usersguide/: index.rst  installation.rst
include/double-down/: AABB.h  MOABDirectAccess.h  MOABRay.h  RTI.hpp  Vec3.h  Vec3ba.h  Vec3da.h  Vec3fa.h  embree_interface.hpp  primitives.hpp  ray.h  sys.h  version.h.in
include/double_down/: MOABDirectAccess.h  MOABRay.h  RTI.hpp  Vec3da.h  constants.h  embree_interface.hpp  primitives.hpp  ray.h
src/: AABB.h  MOABDirectAccess.cpp  MOABDirectAccess.h  MOABRay.cpp  MOABRay.h  RTI.cpp  RTI.hpp  TriangleIntersectors.h  Vec3ba.h  Vec3da.h  Vec3fa.h  constants.h  filter.h  geom_funcs.cpp  primitives.cpp  primitives.hpp  ray.h  ray_funcs.cpp  ray_funcs.h  rtc.hpp  sys.h
test/: CMakeLists.txt  test_build.cpp  test_closest.cpp  test_find_vol.cpp  test_mb.cpp  test_rf.cpp  test_utils.cpp  test_utils.hpp
test_files/: 3k-tri-cube.h5m  CMakeLists.txt  cube.h5m  cube_cyl.h5m  small_sphere.h5m
tools/: CMakeLists.txt  closest_to_location.cpp  ray_fire.cpp
